# cerebral-artery-annotation

./: LICENSE  README.md  requirements.txt  setup.cfg
data/Dataset600_IXI/: dataset.json
notebooks/: inference.ipynb  prepare.ipynb  training.ipynb
