[metadata]
name = cerebral-artery-segmentation
author = Bertram Sabrowsky-Hirsch
author_email = bertram.sabrowsky-hirsch@risc-software.at
url = https://github.com/risc-mi/cerebral-artery-annotation
version = 1.0.0
description = Code and Data realted to the publication Segmentation and Anatomical Annotation of Cerebral Arteries in Non-Angiographic MRI
long_description = file: README.md
long_description_content_type = text/markdown
license = proprietary and confidential
classifiers =
    Programming Language :: Python
    License :: Other/Proprietary License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = true
python_requires = >= 3.9
setup_requires =
    setuptools
install_requires =
    nnunetv2>=2.1
    torch>=2.0
    simpleitk==2.3